fixed bug at too low budget

--- a/static/css/team.css
+++ b/static/css/team.css
@@ -15,3 +15,11 @@
   background-color: #e9e9e9;
   border: 0;
 }
+
+.info {
+  padding-top: 50px;
+}
+
+.info h3, h4 {
+  text-align: center;
+}
